Fix clipped associated campaign

--- a/src/assets/scss/_flex.scss
+++ b/src/assets/scss/_flex.scss
@@ -127,4 +127,8 @@
   &--wrap {
     flex-wrap: wrap;
   }
+
+  &--align-start {
+    align-items: flex-start;
+  }
 }
